--- a/train.ipynb
+++ b/train.ipynb
@@ -2,14 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b96a62bc",
-   "metadata": {},
-   "source": [
-    "# Deep Recursive Transformer"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e9077649",
    "metadata": {},
    "source": [
@@ -23,26 +15,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.cuda as cuda\n",
-    "import torch.optim as optim\n",
-    "from torchvision import datasets, transforms\n",
-    "from timm.models.layers import trunc_normal_\n",
-    "from torch.utils.data import DataLoader\n",
-    "from torchsummary import summary\n",
+    "# import torch\n",
+    "# import torch.nn as nn\n",
+    "# import torch.cuda as cuda\n",
+    "# import torch.optim as optim\n",
+    "# from torchvision import datasets, transforms\n",
+    "# from timm.models.layers import trunc_normal_\n",
+    "# from torch.utils.data import DataLoader\n",
+    "# from torchsummary import summary\n",
     "\n",
-    "import numpy as np\n",
-    "import cv2 as cv\n",
-    "from PIL import Image\n",
-    "import time\n",
-    "import warnings\n",
-    "import time\n",
+    "# import numpy as np\n",
+    "# import cv2 as cv\n",
+    "# from PIL import Image\n",
+    "# import time\n",
+    "# import warnings\n",
+    "# import time\n",
     "\n",
-    "from transformer_block import TransformerBlock, PatchEmbed, PatchUnEmbed\n",
-    "from data_loader import Rain800TrainData, Rain800ValData\n",
-    "from my_utils import batch_PSNR, batch_SSIM, output_to_image\n",
-    "from my_utils import save_ckp, load_ckp, base_path"
+    "from model import DeepRecursiveTransformer\n",
+    "# from my_utils import batch_PSNR, batch_SSIM, output_to_image\n",
+    "# from my_utils import save_ckp, load_ckp, base_path"
    ]
   },
   {
@@ -78,7 +69,6 @@
     "error_plot_freq = 20\n",
     "INT_MAX = 2147483647\n",
     "error_tolerence = 10\n",
-    "patch_size = 1\n",
     "\n",
     "#paths\n",
     "base_pth = base_path()\n",
@@ -114,139 +104,6 @@
     "### Prepare Data for Training\n",
     "# train_dataset = Rain800TrainData(training_image_size, dataset_dir='/Rain-800/') #/Rain100L-Train/\n",
     "# train_loader = DataLoader(dataset=train_dataset, batch_size=batch_size, shuffle=True, pin_memory=True, drop_last=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "61f2715f",
-   "metadata": {},
-   "source": [
-    "### Model Design"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ba8eb800",
-   "metadata": {},
-   "source": [
-    "We inherit the swin transformer block with a modification: WSA -> CONV2d for our network. Here we design the recursive network such that every transformer blocks in the same residual units share the same weigh. We simply stack these residual units recursiely."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "5fb51316",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#patch embedding -> transformer -> patch unembedding\n",
-    "class BasicBlock(nn.Module):\n",
-    "    def __init__(self, dim, input_resolution, num_heads, patch_size):\n",
-    "        super().__init__()\n",
-    "        self.dim = dim\n",
-    "        self.patch_size = patch_size\n",
-    "        self.input_resolution = input_resolution\n",
-    "        H, W = self.input_resolution\n",
-    "        self.num_heads = num_heads\n",
-    "        self.transformer = TransformerBlock(self.dim, (H//self.patch_size, W//self.patch_size),\n",
-    "                                            num_heads) #patch size is 4\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        x=self.transformer(x)\n",
-    "        return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "a5ad2b8a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Basic Block -> basic block (with skip connection)\n",
-    "class ResidualLayer(nn.Module):\n",
-    "    def __init__(self, dim, input_resolution, residual_depth, patch_size):\n",
-    "        super().__init__()\n",
-    "        self.dim = dim\n",
-    "        self.patch_size = patch_size\n",
-    "        self.residual_depth = residual_depth\n",
-    "        self.input_resolution = input_resolution\n",
-    "        self.block1 = BasicBlock(self.dim, self.input_resolution, 2, self.patch_size) #multi-heads: 2\n",
-    "        self.block2 = BasicBlock(self.dim, self.input_resolution, 2, self.patch_size)\n",
-    "        self.conv_out = nn.Conv2d(self.dim, self.dim, 3, padding = 1)\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        B, HW, C = x.shape\n",
-    "        H, W = self.input_resolution\n",
-    "        shortcut = x\n",
-    "        for _ in range(self.residual_depth):\n",
-    "            x = self.block1(self.block2(x))\n",
-    "            x = torch.add(x, shortcut)\n",
-    "        #convolution at the end of each residual block\n",
-    "        x = x.transpose(1,2).view(B, C, H//self.patch_size, W//self.patch_size)\n",
-    "        x = self.conv_out(x).flatten(2).transpose(1,2)#B L C\n",
-    "        return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "594801ff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#recursive network based on residual units\n",
-    "class DeepRecursiveTransformer(nn.Module):\n",
-    "    def __init__(self, dim, input_resolution, patch_size, residual_depth, recursive_depth):\n",
-    "        super().__init__()\n",
-    "        self.dim = dim\n",
-    "        self.patch_size = patch_size\n",
-    "        self.recursive_depth = recursive_depth\n",
-    "        self.input_resolution = input_resolution\n",
-    "        self.residual_depth = residual_depth\n",
-    "        self.H, self.W = self.input_resolution\n",
-    "        assert self.H == self.W, \"Input hight and width should be the same\"\n",
-    "        self.input_conv1 = nn.Conv2d(3, self.dim, 3, padding=1)\n",
-    "        self.patch_embed = PatchEmbed(img_size=self.H, patch_size = self.patch_size,\n",
-    "                                      in_chans=3, embed_dim=self.dim)\n",
-    "        self.patch_unembed = PatchUnEmbed(img_size=self.H, patch_size = self.patch_size,\n",
-    "                                          in_chans=self.dim, unembed_dim=3)\n",
-    "        self.recursive_layers = nn.ModuleList()\n",
-    "        for i in range(self.recursive_depth):\n",
-    "            layer = ResidualLayer(self.dim, self.input_resolution, self.residual_depth, self.patch_size)\n",
-    "            self.recursive_layers.append(layer)\n",
-    "        self.output_conv1 = nn.Conv2d(self.dim, 3, 3, padding=1)\n",
-    "        #use imagenet mean and std for general domain normalisation\n",
-    "        self.normalise_layer = transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225))\n",
-    "        self.denormalise_layer = transforms.Normalize((-0.485, -0.456, -0.406), (1./0.229, 1./0.224, 1./0.225))\n",
-    "        self.apply(self._init_weights)\n",
-    "        self.activation = nn.LeakyReLU()\n",
-    "        \n",
-    "    #weight initialisation scheme\n",
-    "    def _init_weights(self, l):\n",
-    "        if isinstance(l, nn.Linear):\n",
-    "            trunc_normal_(l.weight, std=.02)\n",
-    "            if isinstance(l, nn.Linear) and l.bias is not None:\n",
-    "                nn.init.constant_(l.bias, 0)\n",
-    "        elif isinstance(l, nn.LayerNorm):\n",
-    "            nn.init.constant_(l.bias, 0)\n",
-    "            nn.init.constant_(l.weight, 1.0)\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        #normalise the data, input shape (B, C, H, W)\n",
-    "        x = self.normalise_layer(x)\n",
-    "        outer_shortcut = x\n",
-    "        x = self.patch_embed(x)\n",
-    "        inner_shortcut = x\n",
-    "\n",
-    "        for i in range(len(self.recursive_layers)):\n",
-    "            x = self.recursive_layers[i](x)\n",
-    "            \n",
-    "        x=torch.add(x, inner_shortcut)\n",
-    "        x=self.patch_unembed(x, (self.H//self.patch_size,self.W//self.patch_size))\n",
-    "        x=torch.add(x, outer_shortcut)\n",
-    "        x=self.denormalise_layer(x)\n",
-    "        return x #output shape (B, C, H, W)"
    ]
   },
   {
