--- a/test.ipynb
+++ b/test.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 1,
    "id": "f6c675d2-f661-4505-98a7-58b371ac808c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Nhay103\\miniconda3\\envs\\gan1\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.cuda as cuda\n",
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 2,
    "id": "9e7275ee-14da-44ad-b993-dbd878afd313",
    "metadata": {},
    "outputs": [],
@@ -55,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 3,
    "id": "b400d6bd-c71c-4023-a112-3968e4f9110b",
    "metadata": {},
    "outputs": [
@@ -82,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 4,
    "id": "4a2a502f-716b-4935-87d3-ad00245579f7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dataset\n",
-    "in_path = './datasets/Test100/input/'\n",
-    "out_path = './datasets/Test100/output/'\n",
+    "in_path = 'datasets/Rain2'\n",
+    "out_path = 'results'\n",
     "Path(out_path).mkdir(exist_ok=True)\n",
     "\n",
     "test_data_loader = DataLoader(RainData(in_path), batch_size=1, shuffle=False)"
@@ -97,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 5,
    "id": "3f623588-5182-49e8-8886-f2738a31ecff",
    "metadata": {},
    "outputs": [
@@ -105,7 +114,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 98/98 [06:17<00:00,  3.85s/it]\n"
+      "  0%|                                                                                            | 0/5 [00:00<?, ?it/s]C:\\Users\\Nhay103\\miniconda3\\envs\\gan1\\lib\\site-packages\\torch\\functional.py:568: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at  C:\\cb\\pytorch_1000000000000\\work\\aten\\src\\ATen\\native\\TensorShape.cpp:2228.)\n",
+      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████| 5/5 [00:32<00:00,  6.60s/it]\n"
      ]
     }
    ],
